--- a/styles/global.css
+++ b/styles/global.css
@@ -51,3 +51,20 @@ tr,td,th{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.3em;
 }
+
+.nav{
+
+    height: 30px;
+    background-color: black;
+}
+.footer-min{
+
+    height: 100px;
+    background-color: black;
+
+}
+a{
+    text-decoration: none;
+    margin: 10px ;
+    color: wheat;
+}
