--- a/styles/style.css
+++ b/styles/style.css
@@ -105,3 +105,30 @@ section{
     font-family: 'oswald';
     src: url('https://fonts.googleapis.com/css2?family=Oswald');
 }
+
+.multi-image-backgrnd{
+
+    width: 100%;
+    height: 900px;
+    background-repeat: no-repeat;
+    background-size: 100px 100px;
+    background-position:
+        top 10px left 10px,
+        top 10px right 20px,
+        bottom 10px right 10px,
+        bottom 10px left 10px;
+    background-image:
+        url('/images/ballon.jpeg'), url('/images/ballon.jpeg'),
+         url('/images/ballon.jpeg'), url('/images/ballon.jpeg')
+
+
+}
+.heading{
+
+    width: 88%;
+    height: 10%;
+    background-image: 
+             linear-gradient(#001100,#005505,#00A900,#0000FF);
+    transform:translate(120px,20px)         
+}
+
